Filebrowser "Open File" button disappear when double-click thumbnail #51969

Closed
opened 2017-07-04 11:16:38 +02:00 by Dalai Felinto · 11 comments

Blender Version
Broken: 2.8x
Worked: 2.7x

Short description of error
To open images or .blend with thumbnail leads to issues.

Exact steps for others to reproduce the error

  • Open filebrowser (F1)
  • Click on thumbnail preview in a folder with a few Blender files
  • Double-click in one of the thumbnails to open the blend file.

The file is not opened and the "Open Blender File" button disappears.

**Blender Version** Broken: 2.8x Worked: 2.7x **Short description of error** To open images or .blend with thumbnail leads to issues. **Exact steps for others to reproduce the error** * Open filebrowser (F1) * Click on thumbnail preview in a folder with a few Blender files * Double-click in one of the thumbnails to open the blend file. The file is not opened and the "Open Blender File" button disappears.
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto

#52061 was marked as duplicate of this issue

#52061 was marked as duplicate of this issue
Bastien Montagne was assigned by Dalai Felinto 2017-07-04 11:17:54 +02:00

Added subscriber: @SteffenD

Added subscriber: @SteffenD

Eeeeh… Not sure what I can do here, this is an OpenGL bug I think.

I can reproduce the issue when running on my laptop GPU (NVidia 850m, 375.66 drivers, with bumblebee/optimus), but not when running on integrated Intel 'gpu' (and Mesa drivers I suppose)… :/

Eeeeh… Not sure what I can do here, this is an OpenGL bug I think. I can reproduce the issue when running on my laptop GPU (NVidia 850m, 375.66 drivers, with bumblebee/optimus), but not when running on integrated Intel 'gpu' (and Mesa drivers I suppose)… :/
Author
Owner

Added subscriber: @nezumi

Added subscriber: @nezumi

OK, sooooo… On second thought (and much investigation) I do not think it's actually related to OpenGL.

Thing is, on my laptop I nearly never can reproduce the issue (only happens like a few % of times). On studio workstation it happens like 99% of time.

Using tmp-debug-filebrowser, added bunch of prints everywhere, and… I don’t understand what happens currently. It seems that on buggy machine, event added by 'exec' filebrowser operator is handled nearly immediately, and in a wrong way, by the event handler loop, while on machine which is working OK that FILESELECT event gets handled later (as expected), on some next run of handler loop.

Also quite mysterious why it does not fail in master - personal hypothesis would be, new OGL code in 2.8 can (with good GPU) be much, much more efficient, so event loop can be ran more often, and somehow it ends up walking on its own tail. Will keep digging tomorrow.

OK, sooooo… On second thought (and much investigation) I do not think it's actually related to OpenGL. Thing is, on my laptop I nearly never can reproduce the issue (only happens like a few % of times). On studio workstation it happens like 99% of time. Using tmp-debug-filebrowser, added bunch of prints everywhere, and… I don’t understand what happens currently. It *seems* that on buggy machine, event added by 'exec' filebrowser operator is handled nearly immediately, and in a wrong way, by the event handler loop, while on machine which is working OK that `FILESELECT` event gets handled later (as expected), on some next run of handler loop. Also quite mysterious why it does not fail in master - personal hypothesis would be, new OGL code in 2.8 can (with good GPU) be much, much more efficient, so event loop can be ran more often, and somehow it ends up walking on its own tail. Will keep digging tomorrow.

This issue was referenced by 827dc700ba

This issue was referenced by 827dc700baf177a4fbf54e52cedc945eb4c60391
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Spent some time investigating this and noticed the difference to master is that the file-open handler is not stored in wmWindow.modalhandlers but in wmWindow.handlers, which have a much lower priority. So probably some other handler returned WM_HANDLER_BREAK, blocking the handling of wmWindow.handlers (just guessing on this, didn't investigate deeper).

So turns out this is caused by 82ba89b042. I reverted it and added an alternative fix that should work without any side-effects (827dc700ba).

Spent some time investigating this and noticed the difference to master is that the file-open handler is not stored in `wmWindow.modalhandlers` but in `wmWindow.handlers`, which have a much lower priority. So probably some other handler returned `WM_HANDLER_BREAK`, blocking the handling of `wmWindow.handlers` (just guessing on this, didn't investigate deeper). So turns out this is caused by 82ba89b042. I reverted it and added an alternative fix that should work without any side-effects (827dc700ba).
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51969
No description provided.