Fix T51969: Filebrowser "Open File" button disappear when double-click thumbnail

This reverts commit 82ba89b042e7067 (which caused T51969) and adds an
alternative fix (don't unset area stored in modal handler for fileselect
handlers).